# raspi-fanshim

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: FanshimService.c
include/RaspiFanshim/: Fanshim.h  RaspiFanshim.h
src/: Fanshim.c  RaspiFanshim.c
